# oppelganger

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  docker-compose.yml.sample  pyproject.toml
bot/: Dockerfile  launch.sh  main.py
engine/: Dockerfile  main.py
lipsync/: .gitattributes  .gitignore  Dockerfile  go.mod  launch.sh  main.go  main.py
lipsync/wav2lip/: __init__.py  inference.py
lipsync/wav2lip/audio/: __init__.py  audio.py
lipsync/wav2lip/models/: conv.py  wav2lip.py
models/: .gitattributes  .gitignore
personalities/: .gitignore
personalities/putin/: personality.json
personalities/taylor_swift/: personality.json
src/: .gitignore  launch.sh
src/oppelganger/: __init__.py  __main__.py  api.py  chain.py
src/oppelganger/_gfpgan/: gfpgan.py
src/oppelganger/handler/: __init__.py  handler.py  reply.py  stage.py
src/oppelganger/lipsync/: __init__.py  lipsync.py
src/oppelganger/lipsync/wav2lip/: inference.py  model.py
src/oppelganger/lipsync/wav2lip/audio/: audio.py
src/oppelganger/lipsync/wav2lip/models/: wav2lip.py
src/oppelganger/llm/: __init__.py  utils.py
src/oppelganger/personalities/: load.py
src/oppelganger/tts/: __init__.py
src/oppelganger/utils/: __init__.py  flatten.py  getenv.py
src/oppelganger/utils/torch/: device.py
src/personality_engine/: __main__.py
src/personality_engine/_gfpgan/: __init__.py  gfpgan.py
src/personality_engine/blazeface/: __init__.py  blazeface.py
src/personality_engine/handler/: handler.py  reply.py  request.py  stage.py  types.py
src/personality_engine/lipsync/: lipsync.py
src/personality_engine/lipsync/wav2lip/: __init__.py  inference.py
src/personality_engine/lipsync/wav2lip/models/: __init__.py
src/personality_engine/llm/: llm.py  model.py
src/personality_engine/model/: __init__.py  model.py
src/personality_engine/personalities/: __init__.py  json.py  load.py  personality.py  types.py
src/personality_engine/tts/: xtts.py
src/personality_engine/utils/: __init__.py  awaitable.py
