[project]
name = "personality_engine"
version = "0.0.0"
description = "Цепь из LLM, TTS, LipSync образующие движок личности"
authors = [
	{ name = "Kamillaova", email = "me@kamillaova.dev" },
]
dependencies = [
	"llama-cpp-python>=0.2.26",
	"TTS>=0.22.0",
	"torch>=2.1.2",
	"torchaudio>=2.1.2",
	"runpod>=1.5.0",
	"pydantic>=2.5.3",
	"opencv-python>=4.9.0.80",
	"mediapipe>=0.10.9",
	"gfpgan>=1.3.8",
	"aioboto3>=12.1.0",
	"aiofiles>=23.2.1",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "LicenseRef-PersonalityEngine"

[tool.pdm]
package-type = "application"
